overlay form overflow fix

--- a/Resources/less/mmcmfadmin.base.less
+++ b/Resources/less/mmcmfadmin.base.less
@@ -367,7 +367,7 @@ body {
   top: 0;
   left: 0;
   z-index: 2;
-  overflow: hidden;
+  overflow: auto;
   transition: all .3s;
 
   padding: 30px;
